--- a/src/views/Choose_Char.css
+++ b/src/views/Choose_Char.css
@@ -11,8 +11,9 @@ body{
     overflow: hidden;
     top: 20%;
     left: 30%;
+    align-items: center;
     font-family: DungGeunMo;
-    float: left;
+    margin: 0 auto;
 }
 .sel_header{
     justify-content: space-between;
@@ -45,13 +46,37 @@ body{
     justify-content: space-between;
     width: 152.17px;
     height: 230.8px;
-    border: 2px solid ghostwhite;
-    background: #343232;
-    object-fit:cover
+    border: 4px solid ghostwhite;
+    background: #032213;
+    object-fit: contain;
+    border-radius: 5px;
 }
-.container_select >img :hover{
-    background:linear-gradient(transparent 10%, #c4bdbd);
-    transform: scale(1.1);
+.container_select > span{
+    justify-content: center;
+    width: 152.17px;
+    height: 230.8px;
+    border: 4px solid #ffffff;
+    background: #032213;
+    font-size: 26.3949px;
+    line-height: 33px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.01em;
+    color: rgba(252, 206, 57, 0.3);
+    border-radius: 5px;
+}
+.container_select :hover{
+    background:#0C8247;
+    border: 4px solid #FCCE39 ;
+}
+.PreNextBT{
+    background-color: white;
+    border:0;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: DungGeunMo;
+    color: #0C8247;
 }
 .chosen_hero{
     width: 413px;
@@ -60,13 +85,14 @@ body{
     font-size: 70px;
     position: relative;
     font-weight: bolder;
+    margin-top: -78px;
 }
 .image_chosen{
     position: absolute;
     width: 413px;
-    height: 639px;
-    object-fit:cover;
-    background: #343232;
+    height: 550px;
+    object-fit: contain;
+    background: #032213;
     border-radius: 10px 10px 0px 0px;
 }
 .image_inform{
@@ -95,11 +121,14 @@ body{
     top : 570px;
     left: 15px;
     font-size: 45px;
-    background: #343232;
+    background: #0C8247;
     border:0;
     border-radius: 5px;
     color: #FCCE39;
     font-family: DungGeunMo;
+}
+.input_box::placeholder{
+    color: #FCCE39;
 }
 .category_button_box{
     margin-top: -10px;
@@ -119,7 +148,7 @@ body{
 .complete_button_wrapper{
     position: absolute;
     width: 960px;
-    margin-top:800px;
+    margin-top:900px;
     margin-left: 330px;
 
 }
@@ -131,7 +160,7 @@ body{
     font-size: 23.8px;
     line-height: 28px;
     color:rgba(12, 130, 71, 1);
-    border-color: #dee2e6;
+    border: 0;
     background: #FCCE39;
     border-radius: 5px;
     margin-top: -70px;
@@ -144,7 +173,7 @@ body{
     font-size: 23.8px;
     line-height: 28px;
     color:white;
-    border-color: #DDDDDD;
+    border: 0;
     background: #DDDDDD;
     border-radius: 5px;
     margin-top: -70px;
