메뉴모달 x 버튼 연동
메뉴모달 x 버튼 연동

--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -117,9 +117,8 @@
   height: 40px;
   text-align: center;
   font-size: 18px;
-  border-radius: 5px;
+  border-radius: 5%;
   background-color: #fcce39;
-    border: none;
   color: white;
 }
 
@@ -128,9 +127,8 @@
   height: 65.62px;
   text-align: center;
   font-size: 32px;
-  border-radius: 10px;
+  border-radius: 5%;
   background-color: #fcce39;
-    border: none;
   color: white;
 }
 
