--- a/src/views/Choose_Char.css
+++ b/src/views/Choose_Char.css
@@ -6,11 +6,9 @@ body{
 }
 .main{
     display: flex;
-    width: 960px;
-    height: 864px;
+    width: 822px;
+    height: 740px;
     overflow: hidden;
-    top: 20%;
-    left: 30%;
     align-items: center;
     font-family: DungGeunMo;
     margin: 0 auto;
@@ -21,7 +19,7 @@ body{
     margin-right: 50px;
     display: flex;
     flex-direction: row;
-    margin-top: -35px;
+    margin-top: -90px;
 }
 .sel_hero{
     text-align: center;
@@ -34,18 +32,18 @@ body{
 .container_select{
 
     justify-content: space-between;
-    mso-padding-between: 20px;
+    mso-padding-between: 18px;
     margin-top: 32px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-column-gap: 20.41px;
-    grid-row-gap: 20.83px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
 }
 
 .container_select > img{
     justify-content: space-between;
-    width: 152.17px;
-    height: 230.8px;
+    width: 133.17px;
+    height: 202.8px;
     border: 4px solid ghostwhite;
     background: #032213;
     object-fit: contain;
@@ -53,8 +51,8 @@ body{
 }
 .container_select > span{
     justify-content: center;
-    width: 152.17px;
-    height: 230.8px;
+    width: 133.17px;
+    height: 202.8px;
     border: 4px solid #ffffff;
     background: #032213;
     font-size: 26.3949px;
@@ -66,9 +64,9 @@ body{
     color: rgba(252, 206, 57, 0.3);
     border-radius: 5px;
 }
-.container_select :hover{
-    background:#0C8247;
-    border: 4px solid #FCCE39 ;
+.container_select >img:hover{
+    background:#FCCE39;
+    border: 4px solid #0C8247 ;
 }
 .PreNextBT{
     background-color: white;
@@ -79,9 +77,9 @@ body{
     color: #0C8247;
 }
 .chosen_hero{
-    width: 413px;
-    height: 639px;
-    margin-left: 26.83px;
+    width: 361px;
+    height: 559px;
+    margin-left: 16.83px;
     font-size: 70px;
     position: relative;
     font-weight: bolder;
@@ -89,8 +87,8 @@ body{
 }
 .image_chosen{
     position: absolute;
-    width: 413px;
-    height: 550px;
+    width: 361px;
+    height: 500px;
     object-fit: contain;
     background: #032213;
     border-radius: 10px 10px 0px 0px;
@@ -108,19 +106,19 @@ body{
 }
 .Chr_Name_box{
     position: absolute;
-    width: 403px;
-    height: 108px;
-    top: 535px;
+    width: 338px;
+    height: 95px;
+    top: 483px;
     background: #0C8247;
     border-radius: 0px 0px 10px 10px;
 }
 .input_box{
     position: absolute;
-    width: 380px;
+    width: 330px;
     height: 54px;
-    top : 570px;
+    top : 515px;
     left: 15px;
-    font-size: 45px;
+    font-size: 40px;
     background: #0C8247;
     border:0;
     border-radius: 5px;
@@ -131,7 +129,7 @@ body{
     color: #FCCE39;
 }
 .category_button_box{
-    margin-top: -10px;
+    margin-top: -50px;
     align-items: center;
     justify-content: space-between;
 }
@@ -148,17 +146,17 @@ body{
 .complete_button_wrapper{
     position: absolute;
     width: 960px;
-    margin-top:900px;
-    margin-left: 330px;
+    margin-top:850px;
+    margin-left: 720px;
 
 }
 .complete_button1{
     position: absolute;
-    width: 300px;
-    height: 50px;
+    width: 263px;
+    height: 44px;
     font-family: DungGeunMo;
-    font-size: 23.8px;
-    line-height: 28px;
+    font-size: 18.8px;
+    line-height: 18px;
     color:rgba(12, 130, 71, 1);
     border: 0;
     background: #FCCE39;
@@ -167,11 +165,11 @@ body{
 }
 .complete_button2{
     position: absolute;
-    width: 300px;
-    height: 50px;
+    width: 263px;
+    height: 44px;
     font-family: DungGeunMo;
-    font-size: 23.8px;
-    line-height: 28px;
+    font-size: 18.8px;
+    line-height: 18px;
     color:white;
     border: 0;
     background: #DDDDDD;
