--- a/src/views/Link_input.css
+++ b/src/views/Link_input.css
@@ -4,28 +4,28 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 344px;
-    height: 210px;
+    width: 235px;
+    height: 144px;
     background: #0C8247;
     border-radius: 10.5474px;
-    margin-left: -650px;
+    margin-left: -500px;
 }
 .close{
     position: absolute;
-    left: 92.6%;
+    left: 90.6%;
     right: 2.17%;
     top: 3.42%;
     bottom: 88.05%;
     background: #0C8247;
     color: #FCCE39;
-    font-size: 20px;
+    font-size: 15px;
     border: 0;
 }
 .linkmain > input{
     font-size: 20px;
-    margin-top: 30px;
-    width: 250px;
-    height: 50px;
+    margin-top: 44px;
+    width: 171px;
+    height: 34px;
     color: #FCCE39;
     background: #08552E;
     border: 1px solid #000000;
@@ -50,29 +50,31 @@
 }
 .enter1{
     position: relative;
-    margin-top: 40px;
-    width: 60px;
-    height: 20px;
+    margin-top: 28px;
+    margin-bottom: 23px;
+    width: 40px;
+    height: 15px;
     color: #FCCE39;
     background: #21AB66;
     border-radius: 2.5px;
     font-family: DungGeunMo;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 14px;
+    font-size: 9.5px;
+    line-height: 9px;
 }
 .enter2{
     position: relative;
-    margin-top: 40px;
-    width: 60px;
-    height: 20px;
+    margin-top: 28px;
+    margin-bottom: 23px;
+    width: 40px;
+    height: 15px;
     color: #0C8247;
     background: #FCCE39;
     border-radius: 2.5px;
     font-family: DungGeunMo;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 14px;
+    font-size: 9.5px;
+    line-height: 9px;
 }
