--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -120,6 +120,7 @@
   border-radius: 5%;
   background-color: #fcce39;
   color: white;
+    border: none;
 }
 
 #mainWrap .Main .startBtn {
@@ -130,6 +131,17 @@
   border-radius: 5%;
   background-color: #fcce39;
   color: white;
+    border: none;
+}
+#mainWrap .Main .stopBtn {
+    width: 300px;
+    height: 65.62px;
+    text-align: center;
+    font-size: 32px;
+    border-radius: 5%;
+    background-color: #DDDDDD;
+    color: white;
+    border: none;
 }
 
 #mainWrap .Main .selectedGame {
@@ -364,3 +376,39 @@
   line-height: 100px;
 }
 /*# sourceMappingURL=WatingRoom.css.map */
+
+.gameTitle {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 140px;
+    font-size: 36px;
+    color: #fcce39;
+    width: 100%;
+}
+.gameContainer {
+    position: relative;
+}
+.gameContainer:before {
+    position: absolute;
+    width: 450px;
+    height: 65px;
+    top: 50%; transform: translateY(-50%);
+    right: 0;
+    content: "";
+    background-color: #05180F;
+    opacity: 0.55;
+}
+.main-info-btn {
+    font-size: 18px;
+    cursor: pointer;
+}
+.main-info-btn:before {
+    content: "i";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fcce39;
+    position: absolute;
+    right: 12px; top: 12px;
+}
