wordgameview 기능 및 error 수정

--- a/src/views/WordGameView.css
+++ b/src/views/WordGameView.css
@@ -61,6 +61,7 @@
     grid-row-gap: 11px;
 }
 .footer > div{
+    color: #FFFFFF;
     width: 105.17px;
     height: 159.8px;
     background: #032213;
