입장->대기실 파이어베이스 연동

--- a/src/views/find.css
+++ b/src/views/find.css
@@ -1,4 +1,13 @@
+.find_container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
 .find_main{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-content: center;
