--- a/src/views/MainView.css
+++ b/src/views/MainView.css
@@ -79,11 +79,16 @@
     }
 }
 .mainwrapper{
-    margin-top: 10%;
+    margin-top: 3%;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 .main{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     overflow: hidden;
-    vertical-align: auto;
     margin: 0 auto;
     width: 822.22px;
     height: 587px;
