--- a/src/views/Link_input.css
+++ b/src/views/Link_input.css
@@ -6,6 +6,7 @@
     position: absolute;
     width: 235px;
     height: 144px;
+    margin-top: 30%;
     background: #0C8247;
     border-radius: 10.5474px;
     margin-left: -500px;
