--- a/src/views/beforeGame/css/MainView.css
+++ b/src/views/beforeGame/css/MainView.css
@@ -93,7 +93,7 @@
     width: 822.22px;
     height: 587px;
     align-content: center;
-    background-image: url("./main_img/main_background.png");
+    background-image: url("../../main_img/main_background.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
