--- a/src/components/css/RottenPlatesGame.scss
+++ b/src/components/css/RottenPlatesGame.scss
@@ -3,7 +3,7 @@
   height: 740px;
   // border: red 1px solid;
   // background-color: black;
-  background-image: url("../PlatesGameImage/TrashDummy.png");
+  background-image: url("../RottenPlatesGame/PlatesGameImage/TrashDummy.png");
   background-repeat: no-repeat;
   background-position: center;
   position : absolute;
@@ -114,7 +114,7 @@
       display:flex;
       justify-content: center;
       align-items: center;
-      background-image: url('../PlatesGameImage/timer.png');
+      background-image: url('../RottenPlatesGame/PlatesGameImage/timer.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
@@ -160,7 +160,7 @@
 
     .cellItem {
       position: absolute;
-      background-image: url("../PlatesGameImage/PlateDefault.png");
+      background-image: url("../RottenPlatesGame/PlatesGameImage/PlateDefault.png");
       background-repeat : no-repeat;
       background-position: center;
       width: 106px;
@@ -169,7 +169,7 @@
     }
 
     .Plate {
-      background-image: url("../PlatesGameImage/Plate.png");
+      background-image: url("../RottenPlatesGame/PlatesGameImage/Plate.png");
       width: 105px;
       height: 53px;
     }
