라이어게임 지목 화면 및 정답 입력 컴포넌트 구현

--- a/src/components/css/selectLiar.css
+++ b/src/components/css/selectLiar.css
@@ -65,4 +65,9 @@
     font-size: 32px;
     border-radius: 10px;
     cursor: pointer;
+    /*display: block;*/
+}
+
+.userList {
+    display: block;
 }
