--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -8,13 +8,13 @@
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   padding: 0;
   margin: 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 #mainWrap .navi {
@@ -22,13 +22,28 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #mainWrap .navi .modal {
-  background-color: lightgrey;
+  border: none;
+  background-color: #E9DDC1;
   margin: 10px;
+  color: #5F5F5F;
+  width: 81px;
+  height: 19px;
+  font-size: 10px;
+  border-radius: 5px;
+}
+
+#mainWrap .navi .modal:nth-child(3) {
+  width: 121px;
+}
+
+#mainWrap .navi .modal:nth-child(1) {
+  background-color: #1B9659;
+  color: #fcce39;
 }
 
 #mainWrap .Main {
@@ -37,13 +52,13 @@
   display: flex;
   height: 695.38px;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
 }
 
 #mainWrap .Main .char1 {
@@ -52,11 +67,11 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 #mainWrap .Main .gameMain {
@@ -65,15 +80,15 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 #mainWrap .Main .char2 {
@@ -82,11 +97,11 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 #mainWrap .Main .character {
@@ -103,8 +118,8 @@
   font-size: 14px;
   line-height: 19px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
   letter-spacing: 0.01em;
   margin-top: 10px;
@@ -120,6 +135,7 @@
   border-radius: 5px;
   background-color: #fcce39;
   color: white;
+  border: none;
 }
 
 #mainWrap .Main .startBtn {
@@ -130,27 +146,83 @@
   border-radius: 10px;
   background-color: #fcce39;
   color: white;
+  border: none;
+  cursor: pointer;
 }
 
 #mainWrap .Main .selectedGame {
   width: 450px;
   height: 315.46px;
-  border-radius: 10px;
+  border-radius: 5%;
   background-color: #0c8247;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.btnContainer {
+  width: 822.22px;
+  text-align: right;
 }
 
 #mainWrap .Main .selectedGame .selecteMessage {
   font-size: 36px;
   color: #fcce39;
+}
+
+.gameContainer {
+  border: 5px solid #fcce39;
+  /*box-sizing: border-box;*/
+}
+
+.gameTitle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 36px;
+  color: #FCCE39;
+  z-index: 1;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.gameTitle:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 440px;
+  height: 65px;
+  background-color: #05180F;
+  opacity: 0.55;
+}
+
+.main-info-btn {
+  position: relative;
+}
+
+.main-info-btn:before {
+  content: "i";
+  left: 176px;
+  top: 12px;
+  position: absolute;
+  width: 30px;
+  color: #535353;
+  height: 30px;
+  font-size: 28px;
+  border-radius: 50%;
+  background-color: #FCCE39;
+  border: 2px solid #000000;
 }
 
 #menuModal #backBtn {
@@ -175,14 +247,14 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #menuModal .menuWraper .menuTitle {
@@ -197,8 +269,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #menuModal .menuWraper .menuRankContainer .menuRankLeft {
@@ -210,13 +282,13 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #08552E;
   border-radius: 10px;
 }
@@ -257,7 +329,7 @@
   color: #fcce39;
   font-size: 14px;
   -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
   margin-left: 20px;
 }
 
@@ -288,14 +360,14 @@
   height: 436.72px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #05391F;
   border-radius: 10px;
 }
@@ -307,17 +379,17 @@
   width: 360.1px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   font-size: 20px;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding-top: 10px;
   -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 
 #menuModal .menuWraper .menuRankContainer .menuRankRight .scrollBtnContainer .leftBtn {
@@ -347,7 +419,7 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   margin: 5px;
 }
 
@@ -357,10 +429,10 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 #menuModal .menuWraper .menuRankContainer .menuRankRight .menuRankRightWrapper .menuRangkRightContainer .rightRank {
@@ -384,8 +456,8 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 #menuModal .menuWraper .menuRankContainer .menuRankRight .menuRankRightWrapper .menuRangkRightContainer .rightBadgeContainer .rightBadges {
