--- a/src/views/game/css/WordGameCategoryView.css
+++ b/src/views/game/css/WordGameCategoryView.css
@@ -3,6 +3,11 @@
     height: 740px;
     text-align: center;
     vertical-align: middle;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #WordGameCategoryHeader {
