--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -187,29 +187,38 @@
 
 .gameTitle {
   position: absolute;
-  left: 50%;
+  /* left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); */
+  top : 47%;
+  width: 441px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 36px;
   color: #FCCE39;
   z-index: 1;
+  background-color: rgba(5,24,15,0.55);
+  /* opacity: 0.55; */
+  /* background; */
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
-
+/* 
 .gameTitle:before {
   content: "";
   position: absolute;
-  z-index: -1;
+  z-index: -1; 
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); 
   width: 440px;
-  height: 65px;
+  height: 65px; 
   background-color: #05180F;
   opacity: 0.55;
-}
+} */
 
 .main-info-btn {
   position: relative;
