대기실 선택시 색 관련 이슈
대기실 선택시 색 관련 이슈

--- a/src/components/css/selectGame.css
+++ b/src/components/css/selectGame.css
@@ -12,6 +12,54 @@
     overflow: hidden;
 }
 
+.gameListactive {
+    list-style-type: none;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 350px;
+    box-sizing: border-box;
+    height: 220px;
+    padding: 10px;
+    cursor: pointer;
+    margin: 18px;
+    overflow: hidden;
+    background-color: rgba(252, 206, 57, 0.6)
+}
+
+.gameListactive:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    width: 350px;
+    box-sizing: border-box;
+    height: 220px;
+    background-color: rgba(252, 206, 57, 0.6)
+}
+
+.gameListactive:nth-child(1) {
+    background-image: url("../../views/img/상한안주.png");
+    position: relative;
+}
+
+.gameListactive:nth-child(2) {
+    background-image: url("../../views/img/노가리마블.png");
+    position: relative;
+}
+
+.gameListactive:nth-child(3) {
+    background-image: url("../../views/img/안주라이어.png");
+    position: relative;
+}
+
+.gameListactive:nth-child(4) {
+    background-image: url("../../views/img/중간고사.png");
+    position: relative;
+}
+
+
 .gameList:nth-child(1) {
     background-image: url("../../views/img/상한안주.png");
     position: relative;
@@ -45,13 +93,17 @@
     display: block;
 }
 
-.gameList[tabindex="0"]:focus:before {
+
+
+/* .gameList[tabindex="0"]:focus:before {
     background-color: #FCCE39;
 }
+
 .gameList[tabindex="0"]:focus .infoBtn {
     background-color: #1B9659;
     color: #FCCE39;
 }
+
 .gameList[tabindex="0"]:focus {
     color: #20985C;
 }
@@ -87,7 +139,7 @@
 }
 .gameList[tabindex="3"]:focus {
     color: #20985C;
-}
+} */
 
 
 
