--- a/src/views/beforeGame/css/Choose_Char.css
+++ b/src/views/beforeGame/css/Choose_Char.css
@@ -66,7 +66,8 @@ body{
 }
 .container_select >img:hover{
     background:#FCCE39;
-    border: 4px solid #0C8247 ;
+    border: 4px solid #0C8247;
+    cursor: pointer;
 }
 .PreNextBT{
     background-color: white;
@@ -75,7 +76,13 @@ body{
     font-weight: bold;
     font-family: DungGeunMo;
     color: #0C8247;
+    cursor: pointer;
 }
+
+.PreNextBT:hover{
+    color: #FCCE39;
+}
+
 .chosen_hero{
     width: 361px;
     height: 559px;
@@ -141,7 +148,13 @@ body{
     font-size: 20px;
     color: ghostwhite;
     border-radius: 15px;
+    cursor: pointer;
 }
+
+.category_button:hover {
+    background: rgba(0,0,0,0.6);
+}
+
 .complete_button_wrapper{
     position: relative;
     width: 960px;
@@ -164,7 +177,14 @@ body{
     border: 0;
     background: #FCCE39;
     border-radius: 5px;
+    cursor: pointer;
 }
+
+.complete_button1:hover {
+    background-color: black;
+    color: #FCCE39;
+}
+
 .complete_button2{
     position: absolute;
     width: 263px;
