수정수정수정수정수정수정
맨위, 맨아래 간식 이미지 넣기 O
썩은간식 + 대기실 파란 테두리 지우기 O
라이어게임 타이머 마이너스로 내려가는거 수정 O
라이어게임 발언페이지 발언하는 유저 노란색 테두리O
라이어게임에 있는 타이머들 다 동작하게 만듬

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,14 @@ body * {
 }
 
 body {
-  background-image: url("./images/back.png");
+  /* background-repeat: no-repeat; */
+  background-size: contain;
+  width: auto;
+  height: 100vh;
+  height: 100vw;
+  background-position: center center;
+  background-image: url("./images/combineUpDown.jpg");
+
 }
 
 
