웨이팅룸뱃지추가뱃지추가
- 웨이팅룸뱃지추가뱃지추가
- 뱃지 id 값 ( 1~12) 사용하기 편함

--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -393,8 +393,10 @@
 
 #menuModal .menuWraper .menuRankContainer .menuRankLeft .LeftBadgeContainer .LeftBadges .LeftBadge {
   border-radius: 50%;
-  width: 19.94px;
-  height: 19.94px;
+  /* width: 19.94px;
+  height: 19.94px; */
+    width: 35px;
+    height: 35px;
   background-color: #FCCE39;
   color: #000000;
   text-align: center;
@@ -516,13 +518,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+
 }
 
 #menuModal .menuWraper .menuRankContainer .menuRankRight .menuRankRightWrapper .menuRangkRightContainer .rightBadgeContainer .rightBadges .rightBadge {
   background-color: #000000;
   border-radius: 50%;
-  width: 12.77px;
-  height: 12.77px;
+  /* width: 12.77px;
+  height: 12.77px; */
+  width: 20px;
+  height: 20px;
   text-align: center;
   font-weight: bold;
   margin-top: 5px;
